--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            font-size: 1.5em;
+            color: #555;
         }
     </style>
 </head>
@@ -49,8 +51,8 @@
         <div id="spinner">Caricamento...</div>
     </div>
 
-    <!-- Includi ePub.js tramite CDN aggiornato -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/epub.js/0.3.88/epub.min.js"></script>
+    <!-- Includi ePub.js tramite jsDelivr -->
+    <script src="https://cdn.jsdelivr.net/npm/epubjs@0.3.88/dist/epub.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
