--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <div id="spinner">Caricamento...</div>
     </div>
 
-    <!-- Includi ePub.js tramite jsDelivr -->
-    <script src="https://cdn.jsdelivr.net/npm/epubjs@0.3.88/dist/epub.min.js"></script>
+    <!-- Includi ePub.js tramite unpkg CDN -->
+    <script src="https://unpkg.com/epubjs@0.3.88/dist/epub.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
