--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div id="spinner">Caricamento...</div>
     </div>
 
-    <!-- Includi ePub.js tramite unpkg CDN -->
+    <!-- Includi ePub.js tramite un CDN affidabile -->
     <script src="https://unpkg.com/epubjs@0.3.88/dist/epub.min.js"></script>
     <script src="script.js"></script>
 </body>
