--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <div id="spinner">Caricamento...</div>
     </div>
 
-    <!-- Includi ePub.js tramite unpkg CDN -->
-<script src="https://unpkg.com/epubjs@0.3.95/dist/epub.min.js"></script>
-
-    
+    <!-- Includi JSZip tramite CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <!-- Includi xml2js per parsare i file XML -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xml2js/0.4.23/xml2js.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
