--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1>EPUB Reader Online</h1>
 
     <input type="file" id="epubFile" accept=".epub" />
-    
+
     <div id="controls">
         <label for="speed">Velocità (parole al secondo): </label>
         <input type="number" id="speed" value="5" min="1" max="20" />
         <button id="start">Inizia Lettura</button>
         <button id="stop">Ferma Lettura</button>
+        <button id="toggleNightMode">Modalità Notte</button>
     </div>
     
     <div id="toc">
@@ -41,4 +42,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
