--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         <button id="stop">Ferma Lettura</button>
         <button id="toggleNightMode">Modalità Notte</button>
     </div>
-    
+
     <div id="toc">
         <h2>Indice</h2>
         <ul id="tocList">
             <!-- I titoli dei capitoli verranno inseriti qui -->
         </ul>
     </div>
-    
+
     <div id="pagination">
         <button id="prevPage">Pagina Precedente</button>
         <button id="nextPage">Pagina Successiva</button>
@@ -37,8 +37,7 @@
 
     <!-- Includi JSZip tramite CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-    <!-- Includi xml2js per parsare i file XML -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/xml2js/0.4.23/xml2js.min.js"></script>
+    <!-- Includi script.js -->
     <script src="script.js"></script>
 </body>
 </html>
