--- a/index.html
+++ b/index.html
@@ -7,28 +7,26 @@
 </head>
 <body>
 
-    <h1>EPUB Reader Online</h1>
+    <div id="container">
+        <h1>EPUB Reader Online</h1>
 
-    <div id="controls">
-        <input type="file" id="epubFile" accept=".epub" />
+        <div id="controls">
+            <input type="file" id="epubFile" accept=".epub" />
 
-        <label for="speed">Velocità (parole al secondo): </label>
-        <input type="number" id="speed" value="5" min="1" max="20" />
+            <label for="speed">Velocità (parole al secondo): </label>
+            <input type="number" id="speed" value="5" min="1" max="20" />
 
-        <button id="start">Inizia Lettura</button>
-        <button id="stop">Ferma Lettura</button>
+            <button id="start">Inizia Lettura</button>
+            <button id="stop">Ferma Lettura</button>
+            <button id="toggleNightMode">Modalità Notte</button>
+        </div>
 
-        <button id="prevPage">Pagina Precedente</button>
-        <button id="nextPage">Pagina Successiva</button>
-
-        <button id="toggleNightMode">Modalità Notte</button>
-    </div>
-
-    <div id="toc">
-        <h2>Indice</h2>
-        <ul id="tocList">
-            <!-- I titoli dei capitoli verranno inseriti qui -->
-        </ul>
+        <div id="toc">
+            <h2>Indice</h2>
+            <ul id="tocList">
+                <!-- I titoli dei capitoli verranno inseriti qui -->
+            </ul>
+        </div>
     </div>
 
     <div id="reader">
@@ -37,6 +35,7 @@
 
     <!-- Includi JSZip tramite CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+    <!-- Includi script.js -->
     <script src="script.js"></script>
 </body>
 </html>
