--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-    <h1>EPUB Reader Online</h1>
+    <header>
+        <h1>EPUB Reader Online</h1>
+    </header>
 
     <div id="controls">
         <input type="file" id="epubFile" accept=".epub" />
@@ -27,9 +29,9 @@
         </ul>
     </div>
 
-    <div id="reader">
+    <main id="reader">
         <div id="spinner">Caricamento...</div>
-    </div>
+    </main>
 
     <!-- Includi JSZip tramite CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
