--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <div id="controls">
         <input type="file" id="epubFile" accept=".epub" />
 
+        <label for="tocSelect">Vai a:</label>
+        <select id="tocSelect">
+            <option value="">Seleziona un capitolo</option>
+            <!-- Le voci dell'indice verranno aggiunte qui -->
+        </select>
+
         <label for="speed">Velocità:</label>
         <button id="decreaseSpeed">-</button>
         <span id="speedDisplay">5</span> parole al secondo
