--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Includi una libreria di icone (ad esempio Font Awesome) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
-<body>
+<body class="classic"> <!-- Imposta il tema di default -->
 
     <header>
         <h1><em>Lettore EPUB</em></h1>
@@ -64,7 +64,6 @@
             <option value="'Times New Roman', serif">Times New Roman</option>
             <option value="'Arial', sans-serif">Arial</option>
             <option value="'Verdana', sans-serif">Verdana</option>
-            <!-- Aggiungi altri font se lo desideri -->
         </select>
     </div>
 
