--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- Includi una libreria di icone (Font Awesome) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Meta tag per la responsività -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body class="classic">
 
