--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 
     <header>
         <h1><em>Lettore EPUB</em></h1>
+        <!-- Pulsante per mostrare/nascondere i controlli su mobile -->
+        <button id="toggle-controls" class="toggle-controls" title="Mostra/Nascondi Controlli">
+            <i class="fa fa-cogs"></i>
+        </button>
     </header>
 
     <!-- Contenitore per le barre dei controlli in alto -->
     <div id="controls-container">
-        <!-- Pulsante per mostrare/nascondere i controlli su dispositivi mobili -->
-        <button id="toggle-controls" class="toggle-controls" title="Mostra/Nascondi Controlli">
-            <i class="fa fa-cogs"></i>
-        </button>
-
         <!-- Prima riga di controlli -->
         <div id="controls-top" class="controls">
             <!-- Pulsante per selezionare il file EPUB -->
